--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
 serde_with = "3.0"
-tracing = "0.1"
+tracing = { version = "0.1", features = ["attributes"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "registry"] }
 tree-sitter = "0.25"
 tree-sitter-bicep = { git = "https://github.com/tree-sitter-grammars/tree-sitter-bicep.git", tag = "v1.1.0" }
 
@@ -26,5 +27,4 @@ path = "src/bin/bicep_docs.rs"
 [profile.release]
 codegen-units = 1
 lto = "fat"
-panic = "abort"
 opt-level = "z"
