docs: Configure Bicep linting rules for examples

--- a/examples/bicepconfig.json
+++ b/examples/bicepconfig.json
@@ -1,4 +1,15 @@
 {
+  "analyzers": {
+    "core": {
+      "enabled": true,
+      "no-unused-params": {
+        "level": "off"
+      },
+      "no-unused-vars": {
+        "level": "off"
+      }
+    }
+  },
   "experimentalFeaturesEnabled": {
     "assertions": true,
     "extensibility": true,
