--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: get-next-version
+    if: needs.get-next-version.outputs.new-release-published == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
