--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,19 +16,15 @@
         "assets": [
           {
             "path": "dist/bicep-docs-x86_64-unknown-linux-gnu/bicep-docs-x86_64-unknown-linux-gnu.zip",
-            "label": "bicep-docs-linux-amd64"
+            "label": "bicep-docs-linux-amd64.zip"
           },
           {
             "path": "dist/bicep-docs-x86_64-pc-windows-msvc/bicep-docs-x86_64-pc-windows-msvc.zip",
-            "label": "bicep-docs-windows-amd64"
+            "label": "bicep-docs-windows-amd64.zip"
           },
           {
             "path": "dist/bicep-docs-aarch64-apple-darwin/bicep-docs-aarch64-apple-darwin.zip",
-            "label": "bicep-docs-macos-arm64"
-          },
-          {
-            "path": "dist/SHA256SUMS.txt",
-            "label": "SHA256SUMS"
+            "label": "bicep-docs-macos-arm64.zip"
           }
         ]
       }
