ci: add pre-commit configuration

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prepare": "husky install || true"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/exec": "7.1.0",
