ci: include Cargo.toml in versioning

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -33,6 +33,7 @@
       "@semantic-release/git",
       {
         "assets": [
+          "Cargo.toml",
           "CHANGELOG.adoc",
           "package.json",
           "package-lock.json"
