--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,12 @@ jobs:
 
   build:
     name: Build
-    needs: test
+    needs:
+      - test
+      - get-next-version
+    permissions:
+      contents: read
+      packages: write
     env:
       CARGO: cargo
     strategy:
@@ -95,23 +100,47 @@ jobs:
           # Linux GNU
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
           # Linux MUSL
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
+            docker: true
+            dockerFile: Dockerfile
+            dockerArch: linux/arm64
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
+            docker: true
+            dockerFile: Dockerfile
+            dockerArch: linux/amd64
           # Windows
           - target: aarch64-pc-windows-msvc
             os: windows-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
           - target: x86_64-pc-windows-msvc
             os: windows-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
           # macOS
           - target: aarch64-apple-darwin
             os: macos-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
           - target: x86_64-apple-darwin
             os: macos-latest
+            docker: false
+            dockerFile: ""
+            dockerArch: ""
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -172,11 +201,59 @@ jobs:
             target/${{ matrix.target }}/release/bicep-docs-${{ matrix.target }}.zip
             target/${{ matrix.target }}/release/SHA256SUM.txt
 
+      # Docker images
+      - name: Set up QEMU
+        if: matrix.docker && matrix.os == 'ubuntu-latest'
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        if: matrix.docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        if: matrix.docker
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        id: docker-build
+        if: matrix.docker
+        uses: docker/build-push-action@v5
+        with:
+          file: ${{ matrix.dockerFile }}
+          context: .
+          tags: ghcr.io/owretch/bicep-docs
+          platforms: ${{ matrix.dockerArch}}
+          build-args: |
+            BIN_PATH=./dist/target/${{ matrix.target }}/release/bicep-docs${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+          outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+
+      - name: Export digest
+        if: matrix.docker
+        run: |
+          mkdir -p ${{ runner.temp }}/digests
+          digest="${{ steps.docker-build.outputs.digest }}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
+
+      - name: Upload digest
+        if: matrix.docker
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ matrix.target }}
+          path: ${{ runner.temp }}/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
   release:
     name: Release
-    needs: build
+    needs:
+      - build
+      - get-next-version
     runs-on: ubuntu-latest
-    if: github.repository == 'oWretch/bicep-docs2'
+    if: github.repository == 'oWretch/bicep-docs'
     permissions:
       contents: write
       packages: write
@@ -208,21 +285,54 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@4305c38b25d97ef35a8ad1f985ccf2d2242004f2
 
-      - name: Download artifacts
+      - name: Download binaries
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           pattern: bicep-docs-*
           path: dist
 
-      - name: List artifacts
+      - name: List binaries
         run: ls -alR .
         working-directory: dist
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Download Docker digests
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ runner.temp }}/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Configure Docker Metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/owretch/bicep-docs
+          tags: |
+            type=semver,pattern={{version}},value=${{ needs.get-next-version.outputs.new-release-version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ needs.get-next-version.outputs.new-release-version }}
+            type=semver,pattern={{major}},value=${{ needs.get-next-version.outputs.new-release-version }}
+
+      - name: Create Docker manifest list and push
+        working-directory: ${{ runner.temp }}/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf 'ghcr.io/owretch/bicep-docs@sha256:%s ' *)
+          docker buildx imagetools inspect ghcr.io/owretch/bicep-docs:${{ steps.meta.outputs.version }}
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: npx semantic-release
