--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -1,6 +1,10 @@
 name: Copilot Development Environment Setup
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  pull_request:
+    paths:
+      - .github/workflows/copilot-setup-steps.yml
 
 permissions:
   contents: read
@@ -11,16 +15,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up stable Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: clippy, rustfmt
-
-      - name: Set up nightly Rust toolchain
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: clippy, rustfmt, miri
 
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
@@ -35,11 +29,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-
 
-      - name: Install cargo-update
-        run: cargo install cargo-update --locked
+      - name: Set up nightly Rust toolchain
+        uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: clippy, rustfmt, miri
 
       - name: Install cargo-deny
-        run: cargo install cargo-deny --locked
+        run: cargo-deny --version || cargo install cargo-deny --locked
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -83,7 +79,6 @@ jobs:
           cargo clippy --version
           cargo fmt --version
           cargo miri --version
-          cargo-update --version
           cargo-deny --version
           python --version
           pip --version
