test: resolve race condition for locale tests
also run cargo update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
+      - name: Run cargo deny check
+        run: cargo deny check
+
       - name: Run tests
         run: cargo test --all-features
 
