--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: cargo-fmt
       - id: cargo-clippy
-        args: ["--all-targets", "--all-features"]
+        args: ["--all-targets", "--all-features", "--", "-D", "warnings"]
       - id: cargo-check
         args: ["--all-targets", "--all-features"]
       - id: cargo-test
