--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         run: cargo clippy --all-targets --all-features -- -D warnings
 
       - name: Run cargo deny check
-        run: cargo deny check
+        run: cargo install --locked cargo-deny && cargo deny check
 
       - name: Run tests
         run: cargo test --all-features
